--- a/src/index.ejs
+++ b/src/index.ejs
@@ -32,9 +32,9 @@
         user-select: none;
       }
 
-      ::-webkit-scrollbar{width:8px;height:4px;}
+      ::-webkit-scrollbar{width:4px;height:4px;}
       ::-webkit-scrollbar-button{width:8px;height:0}
-      ::-webkit-scrollbar-track{background:0 0}
+      ::-webkit-scrollbar-track{background:0}
       ::-webkit-scrollbar-thumb{background:rgba(255, 255,255, 0.2); border-radius: 4px; -webkit-transition:.3s;transition:.3s}
       ::-webkit-scrollbar-thumb:hover{background:rgba(255, 255,255, 0.8);}
       ::-webkit-scrollbar-thumb:active{background:rgba(255, 255,255, 0.8);}
